tests/sksl/errors/MeshFragmentWithShader.stage
### Compilation failed:

error: 5: effects are not permitted in custom mesh shaders
uniform shader myShader;
^^^^^^^^^^^^^^^^^^^^^^^
1 error
